@@ -256,11 +256,11 @@ gnc_header_unrealize (GnomeCanvasItem *item)
         }
 
         if (header->resize_cursor != NULL)
-                gdk_cursor_destroy (header->resize_cursor);
+                gdk_cursor_unref (header->resize_cursor);
         header->resize_cursor = NULL;
 
         if (header->normal_cursor != NULL)
-                gdk_cursor_destroy (header->normal_cursor);
+                gdk_cursor_unref (header->normal_cursor);
         header->normal_cursor = NULL;
 
         if (GNOME_CANVAS_ITEM_CLASS (parent_class)->unrealize)
